2011-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: If g++ version 4.6 or newer is detected, add the
	-fpermissive option (which was also required in a Debian-only fix
	release of 0.3.7 which was made today)

2011-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.win: Simplied using lib${R_ARCH}

2011-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.7

	* man/ConvertibleBond.Rd: Commented-out URLs with 70+ character
	length as they trigger a bug when the corresponding latex manual is
	typeset with the a4 style file. Thanks to Uwe Ligges for spotting this.
	* man/Enum.Rd: Idem
	* man/FittedBondCurve.Rd: Idem

	* src/Makevars.win: Adjust link command to '-lQuantLib', and support
	32 and 64 bit builds of the QuantLib library

2011-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.6

	* src/bermudan.cpp: Added two explicit casts to double scalar
	* src/utils.cpp: Idem

2010-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.5

	* DESCRIPTION: Added RUnit to Suggests:

	* src/bonds.cpp: Use std::vector< RelinkableHandle < Quote > > to
	store a vector of quotes, rather than a variable length array which
	g++ -pedantic and the ISO C++ standard both dislike
	* src/zero.cpp: Idem

	* man/Calendars.Rd: Folded manual pages adjust.Rd, advance.Rd,
	businessDaysBetween.Rd, dayCount.Rd, yearFraction into this.

	* man/ConvertibleBond.Rd: Folded manual pages
	ConvertibleFixedCouponBond.Rd, ConvertibleFloatingCouponBond.Rd, and
	ConvertibleZeroCouponBond.Rd into this one.

	* man/FixedRateBond.Rd: Folded manual pages FixedRateBondYield.Rd
	FixedRateBondPriceByYield.Rd into this one.

	* man/ZeroCouponBond.Rd: Folded manual pages ZeroPriceByYield.Rd
	and ZeroYield.Rd into this one.

	* tests/RQuantlib.Rout.save: Updated to results from running against
	QuantLib 1.0.1 which affected one yield computation at the third
	decimal, as well as one date calculation.
